--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">@color/grey_dark</color>
     <color name="colorPrimaryDark">@android:color/black</color>
     <color name="colorAccent">@color/orange_found</color>
+    <color name="colorAccentFavoritesDialog">@color/text_header_purple</color>
 
     <color name="logo_orange">@color/orange_bright</color>
     <color name="logo_blue">@color/blue_bright</color>
