--- a/app/src/main/res/layout/dialog_delete_favorites.xml
+++ b/app/src/main/res/layout/dialog_delete_favorites.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/clyo_dialog_remove_favorites"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#000000">
 
     <View
@@ -19,13 +19,14 @@
         />
 
     <TextView
-        android:id="@+id/dialog_delete"
+        android:id="@+id/tv_dialog_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxLines="2"
         android:ellipsize="end"
         tools:text="Remove from list: A Wrinkle in Time?"
         android:textColor="@android:color/white"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         app:layout_constraintTop_toBottomOf="@+id/view_marquee"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
