--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,40 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
+
+        <!--https://guides.codepath.com/android/using-dialogfragment#styling-custom-dialog-->
+        <!--Apply Default Style -->
+        <item name="android:dialogTheme">@style/AppDialogTheme</item>
+
+        <!--Apply Default Style-->
+        <item name="android:alertDialogTheme">@style/AppAlertTheme</item>
+    </style>
+
+    <!--Custom Dialog Theme-->
+    <style name="AppDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccentFavoritesDialog</item>
+        <item name="colorControlNormal">@color/colorAccentFavoritesDialog</item>
+        <item name="android:textColorHighlight">@color/purple_translucent</item>
+
+        <!--Window Properties-->
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">false</item>
+        <item name="android:windowBackground">@color/header_favorite_background</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
+    </style>
+
+    <!--Custom Alert Theme extended from base-->
+    <style name="AppAlertTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccentFavoritesDialog</item>
+        <item name="colorControlNormal">@color/colorAccentFavoritesDialog</item>
+        <item name="android:textColorHighlight">@color/purple_translucent</item>
     </style>
 
 
+    
 </resources>
