--- a/app/src/main/res/layout/reviews_grid_item.xml
+++ b/app/src/main/res/layout/reviews_grid_item.xml
@@ -5,45 +5,79 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/constraintLayout_reviews_grid_item"
     android:background="@android:color/black"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     >
 
-    <TextView
-        android:id="@+id/tv_review_title"
+    <View
+        android:id="@+id/v_review_backdrop"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        tools:text="Three Billboards Outside Ebbing, Missouri"
-        android:textColor="@color/white_translucent"
-        android:textStyle="bold"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintTop_toBottomOf="parent"
+        android:layout_height="0dp"
+        android:background="@color/purple_translucent"
+        android:layout_marginLeft="0dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginEnd="0dp"
+        app:layout_constraintDimensionRatio="H,16:9"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/tv_review_release_year"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_review_release_year" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
 
     <TextView
-        android:id="@+id/tv_review_release_year"
+        android:id="@+id/tv_review_author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="(2017)"
-        android:textColor="@color/white_translucent"
-        android:textStyle="bold"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintTop_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/tv_review_title"
-        app:layout_constraintRight_toRightOf="parent"
+        tools:text="by ProlateRotation"
+        android:textColor="@color/white_translucent"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:textStyle="bold|italic"
+        app:layout_constraintTop_toTopOf="@+id/v_review_backdrop"
+        app:layout_constraintLeft_toLeftOf="@+id/v_review_backdrop"
         />
+
+
+    <!--
+    <TextView-->
+        <!--android:id="@+id/tv_review_title"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--tools:text="Three Billboards Outside Ebbing, Missouri"-->
+        <!--android:textColor="@color/white_translucent"-->
+        <!--android:textStyle="bold"-->
+        <!--android:maxLines="1"-->
+        <!--android:ellipsize="end"-->
+        <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"-->
+        <!--android:layout_marginLeft="8dp"-->
+        <!--android:layout_marginRight="8dp"-->
+        <!--app:layout_constraintTop_toBottomOf="parent"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintRight_toLeftOf="@+id/tv_review_release_year"-->
+        <!--app:layout_constraintBaseline_toBaselineOf="@+id/tv_review_release_year" />-->
+    <!---->
+    <!--<TextView-->
+        <!--android:id="@+id/tv_review_release_year"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--tools:text="(2017)"-->
+        <!--android:textColor="@color/white_translucent"-->
+        <!--android:textStyle="bold"-->
+        <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"-->
+        <!--android:layout_marginTop="8dp"-->
+        <!--android:layout_marginLeft="8dp"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginRight="8dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--app:layout_constraintTop_toBottomOf="parent"-->
+        <!--app:layout_constraintLeft_toRightOf="@+id/tv_review_title"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--/>
+        -->
 
 
     <!-- May need a programmatic limit to fit poster... -->
@@ -54,14 +88,14 @@
         tools:text="@string/tools_lorem_paragraph_short"
         android:textColor="@color/white_translucent"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/tv_review_title"
-        app:layout_constraintTop_toBottomOf="@+id/tv_review_title"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_review_author"
+        app:layout_constraintLeft_toLeftOf="@+id/tv_review_author"
+        app:layout_constraintRight_toRightOf="@id/v_review_backdrop"
         />
 
 
@@ -84,17 +118,9 @@
         app:layout_constraintRight_toRightOf="@+id/tv_review_paragrah"
         />
 
-    <TextView
-        android:id="@+id/tv_review_author"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="by ProlateRotation"
-        android:textColor="@color/white_translucent"
-        android:textStyle="bold|italic"
-        app:layout_constraintTop_toBottomOf="@+id/bt_review_more"
-        app:layout_constraintRight_toRightOf="@+id/tv_review_paragrah"
 
-        android:layout_marginTop="8dp" />
+
+
 
 
 </android.support.constraint.ConstraintLayout>
