--- a/app/src/main/res/layout/reviews_grid_item.xml
+++ b/app/src/main/res/layout/reviews_grid_item.xml
@@ -42,44 +42,6 @@
         />
 
 
-    <!--
-    <TextView-->
-        <!--android:id="@+id/tv_review_title"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--tools:text="Three Billboards Outside Ebbing, Missouri"-->
-        <!--android:textColor="@color/white_translucent"-->
-        <!--android:textStyle="bold"-->
-        <!--android:maxLines="1"-->
-        <!--android:ellipsize="end"-->
-        <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"-->
-        <!--android:layout_marginLeft="8dp"-->
-        <!--android:layout_marginRight="8dp"-->
-        <!--app:layout_constraintTop_toBottomOf="parent"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--app:layout_constraintRight_toLeftOf="@+id/tv_review_release_year"-->
-        <!--app:layout_constraintBaseline_toBaselineOf="@+id/tv_review_release_year" />-->
-    <!---->
-    <!--<TextView-->
-        <!--android:id="@+id/tv_review_release_year"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--tools:text="(2017)"-->
-        <!--android:textColor="@color/white_translucent"-->
-        <!--android:textStyle="bold"-->
-        <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"-->
-        <!--android:layout_marginTop="8dp"-->
-        <!--android:layout_marginLeft="8dp"-->
-        <!--android:layout_marginStart="8dp"-->
-        <!--android:layout_marginRight="8dp"-->
-        <!--android:layout_marginEnd="8dp"-->
-        <!--app:layout_constraintTop_toBottomOf="parent"-->
-        <!--app:layout_constraintLeft_toRightOf="@+id/tv_review_title"-->
-        <!--app:layout_constraintRight_toRightOf="parent"-->
-        <!--/>
-        -->
-
-
     <!-- May need a programmatic limit to fit poster... -->
     <TextView
         android:id="@+id/tv_review_paragrah"
@@ -88,6 +50,7 @@
         tools:text="@string/tools_lorem_paragraph_short"
         android:textColor="@color/white_translucent"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:ellipsize="end"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
@@ -117,10 +80,6 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_review_paragrah"
         app:layout_constraintRight_toRightOf="@+id/tv_review_paragrah"
         />
-
-
-
-
 
 
 </android.support.constraint.ConstraintLayout>
