--- a/app/src/main/res/layout/reviews_grid_item.xml
+++ b/app/src/main/res/layout/reviews_grid_item.xml
@@ -51,6 +51,7 @@
         android:textColor="@color/white_translucent"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:ellipsize="end"
+        android:maxLines="6"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
@@ -69,7 +70,7 @@
         android:id="@+id/bt_review_more"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="MORE…"
+        android:text="MORE…"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:textStyle="bold"
         android:textAllCaps="true"
