fix: Fix incoming reviews so won't get the UNIQUE CONSTRAINT VIOLATION error.
Use set operations like you did for the regular input.

--- a/app/src/main/res/layout/reviews_grid_item.xml
+++ b/app/src/main/res/layout/reviews_grid_item.xml
@@ -43,6 +43,7 @@
 
 
     <!-- May need a programmatic limit to fit poster... -->
+    <!-- Try the H,16:9 thing here and see if it makes any difference -->
     <TextView
         android:id="@+id/tv_review_paragrah"
         android:layout_width="wrap_content"
