--- a/app/src/main/res/layout-v21/activity_detail.xml
+++ b/app/src/main/res/layout-v21/activity_detail.xml
@@ -262,6 +262,7 @@
             android:id="@+id/rv_horizontal_linear_reviews"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/no_favorites_gradient"
             android:clipToPadding="false"
             android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@+id/textViewReviewsTitle"
