--- a/app/src/main/res/layout/reviews_grid_item.xml
+++ b/app/src/main/res/layout/reviews_grid_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/constraintLayout_reviews_grid_item"
-    android:background="@android:color/black"
+    android:background="#77000000"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     >
@@ -13,7 +13,8 @@
         android:id="@+id/v_review_backdrop"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/purple_translucent"
+        android:background="@drawable/tmd_error_poster"
+
         android:layout_marginLeft="0dp"
         android:layout_marginStart="0dp"
         android:layout_marginRight="0dp"
@@ -46,11 +47,12 @@
     <!-- Try the H,16:9 thing here and see if it makes any difference -->
     <TextView
         android:id="@+id/tv_review_paragrah"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="342dp"
+        android:layout_height="0dp"
         tools:text="@string/tools_lorem_paragraph_short"
         android:textColor="@color/white_translucent"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:background="#00000000"
         android:ellipsize="end"
         android:maxLines="6"
         android:layout_marginTop="16dp"
@@ -58,6 +60,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginEnd="8dp"
+        app:layout_constraintDimensionRatio="H,16:9"
         app:layout_constraintTop_toBottomOf="@+id/tv_review_author"
         app:layout_constraintLeft_toLeftOf="@+id/tv_review_author"
         app:layout_constraintRight_toRightOf="@id/v_review_backdrop"
@@ -71,7 +74,7 @@
         android:id="@+id/bt_review_more"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MORE…"
+        android:text="@string/detail_review_grid_button"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:textStyle="bold"
         android:textAllCaps="true"
