--- a/app/src/main/res/layout/reviews_grid_item.xml
+++ b/app/src/main/res/layout/reviews_grid_item.xml
@@ -9,12 +9,28 @@
     android:layout_height="wrap_content"
     >
 
-    <View
-        android:id="@+id/v_review_backdrop"
+    <!--<View-->
+        <!--android:id="@+id/v_review_backdrop"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:background="#00000000"-->
+        <!--android:layout_marginLeft="0dp"-->
+        <!--android:layout_marginStart="0dp"-->
+        <!--android:layout_marginRight="0dp"-->
+        <!--android:layout_marginEnd="0dp"-->
+        <!--app:layout_constraintDimensionRatio="H,16:9"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+
+        <!--/>-->
+
+    <!-- May have to set the size when we get the image -->
+    <ImageView
+        android:id="@+id/iv_review_backdrop"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/tmd_error_poster"
-
+        android:scaleType="fitXY"
         android:layout_marginLeft="0dp"
         android:layout_marginStart="0dp"
         android:layout_marginRight="0dp"
@@ -24,7 +40,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
-
 
     <TextView
         android:id="@+id/tv_review_author"
@@ -38,8 +53,8 @@
         android:maxLines="1"
         android:ellipsize="end"
         android:textStyle="bold|italic"
-        app:layout_constraintTop_toTopOf="@+id/v_review_backdrop"
-        app:layout_constraintLeft_toLeftOf="@+id/v_review_backdrop"
+        app:layout_constraintTop_toTopOf="@+id/iv_review_backdrop"
+        app:layout_constraintLeft_toLeftOf="@+id/iv_review_backdrop"
         />
 
 
@@ -63,7 +78,7 @@
         app:layout_constraintDimensionRatio="H,16:9"
         app:layout_constraintTop_toBottomOf="@+id/tv_review_author"
         app:layout_constraintLeft_toLeftOf="@+id/tv_review_author"
-        app:layout_constraintRight_toRightOf="@id/v_review_backdrop"
+        app:layout_constraintRight_toRightOf="@id/iv_review_backdrop"
         />
 
 
