feat: Make RecyclerView BG color match viewType

--- a/app/src/main/res/drawable/rv_orange_background_gradient.xml
+++ b/app/src/main/res/drawable/rv_orange_background_gradient.xml
@@ -7,8 +7,8 @@
 
             <gradient
                 android:angle="270"
-                android:startColor="#FF000000"
-                android:endColor="@color/purple_darker_opaque"
+                android:startColor="@android:color/black"
+                android:endColor="@color/rv_review_orange_background"
                 />
 
         </shape>
