--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,10 @@
     <color name="divider_marquee_3">@color/purple_found</color>
     <color name="divider_marquee_4">@color/blue_found</color>
 
+    <!-- RecyclerView Background Gradients -->
+    <color name="rv_review_orange_background">@color/orange_darker_opaque</color>
+    <color name="rv_review_blue_background">@color/blue_darker_opaque</color>
+    <color name="rv_review_purple_background">@color/purple_darker_opaque</color>
 
 
     <!-- Palettes, for internal use only, private functions and colors.xml -->
@@ -45,6 +49,9 @@
     <color name="orange_bright">#fd9229</color>
     <color name="orange_found">#FFFD5A28</color>
     <color name="orange_dark_opaque">#FF682700</color>
+    <color name="orange_darker_opaque">#FF271601</color>
+
+
 
     <!-- blue -->
     <color name="blue_dark_translucent">#aa001334</color>  <!-- #7700c20 -->
@@ -52,6 +59,7 @@
     <color name="blue_bright">#0b24fb</color>
     <color name="blue_found">#FF3028FD</color>
     <color name="blue_dark_opaque">#FF002556</color>  <!-- #7700c20 -->
+    <color name="blue_darker_opaque">#FF010427</color>  <!-- #7700c20 -->
 
 
     <!-- purple -->
@@ -61,6 +69,7 @@
     <color name="purple_darker_translucent">#aa090114</color>
     <color name="purple_translucent">#cc2a0066</color>
     <color name="purple_dark_opaque">#FF260256</color>
+    <color name="purple_darker_opaque">#FF110127</color>
 
 
 </resources>
