fix: Fix rotation for versions lower than 21
Add to XML the necessary attributes so that you can rotate the
device on any version.

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -231,5 +231,58 @@
             />
 
 
+        <TextView
+            android:id="@+id/textViewReviewsTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            android:paddingStart="2dp"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp"
+            android:paddingEnd="2dp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:text="@string/detail_reviews"
+            android:textAllCaps="true"
+            android:textColor="@color/logo_orange"
+            android:textStyle="bold|italic"
+            android:background="@color/header_popular_background"
+            android:letterSpacing="0.1"
+            app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
+            app:layout_constraintTop_toBottomOf="@+id/textViewSynopsis"
+            app:layout_constraintRight_toRightOf="@+id/textViewSynopsisTitle"
+            />
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_horizontal_linear_reviews"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/no_favorites_gradient"
+            android:clipToPadding="false"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@+id/textViewReviewsTitle"
+            app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
+            app:layout_constraintRight_toRightOf="@+id/textViewSynopsisTitle"
+            />
+
+
+        <!-- RecyclerView will be gone if empty and this will be visible and vice versa -->
+        <TextView
+            android:id="@+id/tv_review_empty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:visibility="visible"
+            android:textColor="@color/white_translucent"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintTop_toBottomOf="@+id/textViewReviewsTitle"
+            app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
+            app:layout_constraintRight_toRightOf="@+id/textViewSynopsisTitle"
+            />
+
+
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
