--- a/app/src/main/res/layout-v21/activity_detail.xml
+++ b/app/src/main/res/layout-v21/activity_detail.xml
@@ -286,5 +286,57 @@
             />
 
 
+        <TextView
+            android:id="@+id/textViewMediaTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_goneMarginTop="48dp"
+            android:layout_marginTop="16dp"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            android:paddingStart="2dp"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp"
+            android:paddingEnd="2dp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:text="@string/detail_media"
+            android:textAllCaps="true"
+            android:textColor="@color/logo_orange"
+            android:textStyle="bold|italic"
+            android:background="@color/header_popular_background"
+            android:letterSpacing="0.1"
+            app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
+            app:layout_constraintTop_toBottomOf="@+id/rv_horizontal_linear_reviews"
+            app:layout_constraintRight_toRightOf="@+id/textViewSynopsisTitle"
+            />
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_horizontal_linear_media"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/no_favorites_gradient"
+            android:clipToPadding="false"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@+id/textViewMediaTitle"
+            app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
+            app:layout_constraintRight_toRightOf="@+id/textViewSynopsisTitle"
+            />
+
+
+        <TextView
+            android:id="@+id/tv_media_empty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:visibility="visible"
+            android:textColor="@color/white_translucent"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintTop_toBottomOf="@+id/textViewMediaTitle"
+            app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
+            app:layout_constraintRight_toRightOf="@+id/textViewSynopsisTitle"
+            />
+
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
