feat: Initially add Thumbnails to Media RecyclerView
You will have to set the viewType colors, and save to Bundles later.
Do not load movies at this point.  Get the thumbnails to come up first.

--- a/app/src/main/res/layout/media_grid_item.xml
+++ b/app/src/main/res/layout/media_grid_item.xml
@@ -13,7 +13,7 @@
         android:id="@+id/ytv_media_thumbnail"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:scaleType="centerCrop"
+        android:scaleType="fitXY"
         android:layout_marginLeft="0dp"
         android:layout_marginStart="0dp"
         android:layout_marginRight="0dp"
@@ -26,7 +26,7 @@
 
     <TextView
         android:id="@+id/tv_media_name"
-        android:layout_width="wrap_content"
+        android:layout_width="342dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
@@ -41,6 +41,7 @@
         android:textStyle="bold|italic"
         app:layout_constraintTop_toBottomOf="@+id/ytv_media_thumbnail"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="@+id/ytv_media_thumbnail"
         />
 
     <TextView
@@ -52,6 +53,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:paddingBottom="8dp"
         tools:text="Featurette"
         android:textColor="@color/white_more_translucent"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
