--- a/app/src/main/res/layout/reviews_grid_item.xml
+++ b/app/src/main/res/layout/reviews_grid_item.xml
@@ -9,22 +9,6 @@
     android:layout_height="wrap_content"
     >
 
-    <!--<View-->
-        <!--android:id="@+id/v_review_backdrop"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:background="#00000000"-->
-        <!--android:layout_marginLeft="0dp"-->
-        <!--android:layout_marginStart="0dp"-->
-        <!--android:layout_marginRight="0dp"-->
-        <!--android:layout_marginEnd="0dp"-->
-        <!--app:layout_constraintDimensionRatio="H,16:9"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--app:layout_constraintRight_toRightOf="parent"-->
-        <!--app:layout_constraintTop_toTopOf="parent"-->
-
-        <!--/>-->
-
     <!-- May have to set the size when we get the image -->
     <ImageView
         android:id="@+id/iv_review_backdrop"
@@ -65,6 +49,7 @@
         android:layout_width="342dp"
         android:layout_height="0dp"
         tools:text="@string/tools_lorem_paragraph_short"
+        android:visibility="invisible"
         android:textColor="@color/white_translucent"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:background="#00000000"
@@ -82,6 +67,33 @@
         />
 
 
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/scrollView_holder_paragraph"
+        android:layout_width="342dp"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="H,16:8"
+        app:layout_constraintTop_toBottomOf="@+id/tv_review_author"
+        app:layout_constraintLeft_toLeftOf="@+id/tv_review_author"
+        app:layout_constraintRight_toRightOf="@id/iv_review_backdrop"
+
+        >
+
+        <TextView
+            android:id="@+id/tv_review_paragrah_2"
+            android:layout_width="342dp"
+            android:layout_height="0dp"
+            tools:text="@string/tools_lorem_paragraph_short"
+            android:textColor="@color/white_translucent"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:background="#00000000"
+            android:paddingTop="16dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
+            />
+
+    </android.support.v4.widget.NestedScrollView>
+
+
     <!-- May want rounded corners and smaller footprint to
      not steal all the limelight.  Like in collections -->
     <!-- Have you thought about Hyperlinked Text? -->
@@ -97,8 +109,8 @@
         android:textColor="@color/white_translucent"
         android:layout_marginRight="8dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_review_paragrah"
-        app:layout_constraintRight_toRightOf="@+id/tv_review_paragrah"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView_holder_paragraph"
+        app:layout_constraintRight_toRightOf="@+id/scrollView_holder_paragraph"
         />
 
 
