--- a/app/src/main/res/layout/reviews_grid_item.xml
+++ b/app/src/main/res/layout/reviews_grid_item.xml
@@ -89,6 +89,7 @@
             android:paddingTop="16dp"
             android:layout_marginRight="8dp"
             android:layout_marginEnd="8dp"
+            android:paddingBottom="16dp"
             />
 
     </android.support.v4.widget.NestedScrollView>
