feat: Use Text Style for Details page Titles
Use the one you just created previously.

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -77,22 +77,17 @@
 
         <TextView
             android:id="@+id/textViewRatingTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/SectionTitleTheme"
             android:layout_marginLeft="24dp"
             android:layout_marginStart="24dp"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
             android:paddingStart="2dp"
             android:paddingLeft="2dp"
             android:paddingEnd="2dp"
             android:paddingRight="2dp"
-            android:maxLines="1"
-            android:ellipsize="end"
             android:text="@string/detail_rating"
             android:textColor="@color/logo_orange"
-            android:textStyle="bold|italic"
             android:background="@color/header_popular_background"
+            android:letterSpacing="0.1"
             app:layout_constraintLeft_toRightOf="@+id/imageViewOnesheet"
             app:layout_constraintTop_toTopOf="@+id/imageViewOnesheet"
             app:layout_constraintRight_toRightOf="@+id/textViewOutOfTen"
@@ -123,21 +118,16 @@
 
         <TextView
             android:id="@+id/textViewRuntimeTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/SectionTitleTheme"
             android:layout_marginTop="16dp"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
             android:paddingStart="2dp"
             android:paddingLeft="2dp"
             android:paddingEnd="2dp"
             android:paddingRight="2dp"
-            android:maxLines="1"
-            android:ellipsize="end"
             android:text="@string/detail_runtime"
             android:textColor="@color/logo_orange"
-            android:textStyle="bold|italic"
             android:background="@color/header_popular_background"
+            android:letterSpacing="0.1"
             app:layout_constraintLeft_toLeftOf="@+id/textViewRating"
             app:layout_constraintTop_toBottomOf="@+id/textViewRating"
             app:layout_constraintRight_toRightOf="@+id/textViewRuntime"
@@ -155,21 +145,16 @@
 
         <TextView
             android:id="@+id/textViewReleaseTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/SectionTitleTheme"
             android:layout_marginTop="16dp"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
             android:paddingStart="2dp"
             android:paddingLeft="2dp"
             android:paddingEnd="2dp"
             android:paddingRight="2dp"
-            android:maxLines="1"
-            android:ellipsize="end"
             android:text="@string/detail_release"
             android:textColor="@color/logo_orange"
-            android:textStyle="bold|italic"
             android:background="@color/header_popular_background"
+            android:letterSpacing="0.1"
             app:layout_constraintLeft_toLeftOf="@+id/textViewRuntime"
             app:layout_constraintTop_toBottomOf="@+id/textViewRuntime"
             app:layout_constraintRight_toRightOf="@+id/textViewRelease"
@@ -188,24 +173,18 @@
 
         <TextView
             android:id="@+id/textViewSynopsisTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/SectionTitleTheme"
             android:layout_marginTop="16dp"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
             android:paddingStart="2dp"
             android:paddingLeft="2dp"
             android:paddingRight="8dp"
             android:paddingEnd="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:maxLines="1"
-            android:ellipsize="end"
             android:text="@string/detail_synopsis"
-            android:textAllCaps="false"
             android:textColor="@color/logo_orange"
-            android:textStyle="bold|italic"
             android:background="@color/header_popular_background"
+            android:letterSpacing="0.1"
             app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
             app:layout_constraintTop_toBottomOf="@+id/imageViewOnesheet"
             app:layout_constraintRight_toRightOf="@+id/textViewSynopsis"
@@ -233,21 +212,14 @@
 
         <TextView
             android:id="@+id/textViewReviewsTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/SectionTitleTheme"
             android:layout_marginTop="16dp"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
             android:paddingStart="2dp"
             android:paddingLeft="2dp"
             android:paddingRight="2dp"
             android:paddingEnd="2dp"
-            android:maxLines="1"
-            android:ellipsize="end"
             android:text="@string/detail_reviews"
-            android:textAllCaps="true"
             android:textColor="@color/logo_orange"
-            android:textStyle="bold|italic"
             android:background="@color/header_popular_background"
             android:letterSpacing="0.1"
             app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
@@ -286,22 +258,15 @@
 
         <TextView
             android:id="@+id/textViewMediaTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/SectionTitleTheme"
             app:layout_goneMarginTop="64dp"
             android:layout_marginTop="16dp"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
             android:paddingStart="2dp"
             android:paddingLeft="2dp"
             android:paddingRight="2dp"
             android:paddingEnd="2dp"
-            android:maxLines="1"
-            android:ellipsize="end"
             android:text="@string/detail_media"
-            android:textAllCaps="true"
             android:textColor="@color/logo_orange"
-            android:textStyle="bold|italic"
             android:background="@color/header_popular_background"
             android:letterSpacing="0.1"
             app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
